// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<FormattedTimeParts> accepts \`format\` prop 1`] = `
Array [
  Array [
    Array [
      Object {
        "type": "hour",
        "value": "02",
      },
    ],
  ],
]
`;

exports[`<FormattedTimeParts> accepts valid Intl.DateTimeFormat options as props 1`] = `
Array [
  Array [
    Array [
      Object {
        "type": "hour",
        "value": "2",
      },
      Object {
        "type": "literal",
        "value": " ",
      },
      Object {
        "type": "dayperiod",
        "value": "AM",
      },
    ],
  ],
]
`;

exports[`<FormattedTimeParts> falls back and warns on invalid Intl.DateTimeFormat options 1`] = `
Array [
  Array [
    Array [],
  ],
]
`;
